--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <hr />
 
     <header style="text-align: center;">
-        <img src="images/johndoe.jpg" width="200" height="200" style="border-radius: 50%;"/>
-        <h1>John Doe</h1>
+        <img src="images/WhatsApp Image 2025-05-02 at 15.32.01_fc2dd73a.jpg" width="200" height="200" style="border-radius: 50%;"/>
+        <h1>Dewa Arwinata</h1>
         <p>Lorem Ipsum is simply dummy text</p>
     </header>
 
@@ -28,12 +28,12 @@
     <article style="text-align: center;">
         <h2>Tentang Saya</h2>
         <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+             Perkenalkan nama saya Dewa Made Arwinata Dana dan saya merupakan mahasiswa dari kampus Institut Desain & Bisnis Bali dan saat ini sedang menekuni pembelajaran di bidang Sistem & Teknologi Informasi, saya merupakan pelajar asli Bali yang berasal dari sebauah desa yang bernama desa Bebali Kelod yang berlokasi di Kabupaten Tabanan Kecamanatan Selemadeg, dan saya memiliki beberapa skill,pengalaman dan hobby seperti berikut.  
         </p>
     </article>
 
     <div style="max-width: 600px; margin: 3em auto">
-        <table border="1" width="100%">
+        <table border="1" width="110%">
             <thead>
                 <tr>
                     <th>Skill</th>
@@ -45,9 +45,10 @@
                 <tr>
                     <td>
                         <ul>
-                            <li>HTML (Expert)</li>
+                            <li>HTML (Entermediate)</li>
                             <li>CSS (Beginner)</li>
                             <li>Javascript (Beginner)</li>
+                            <li>Network Instalation(Expert)</li>
                         </ul>
                     </td>
                     <td>
@@ -71,7 +72,7 @@
 
     <hr>
     <footer style="text-align: center;">
-        <p>Copyright &copy; 2025 John Doe.</p>
+        <p>Copyright &copy; 2025 Arwinata.</p>
     </footer>
 </body>
 </html>
