--- a/about.html
+++ b/about.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ahmad Muhardian Personal Website</title>
+    <title>Dewa Arwinata Personal Website</title>
+    <link rel="stylesheet" type="text/CSS" href="style.css">
 </head>
 
 <body>
-    <nav>
+    <nav class="background">
         <a href="index.html">Home</a> |
         <a href="cv-dian.pdf">Download CV</a> |
         <a href="contact.html">Contact</a> |
@@ -20,19 +21,19 @@
     <article>
         <h1>About Me</h1>
         <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            Perkenalkan nama saya Dewa Made Arwinata Dana dan saya merupakan mahasiswa dari kampus Institut Desain & Bisnis Bali dan saat ini sedang menekuni pembelajaran di bidang Sistem & Teknologi Informasi, saya merupakan pelajar asli Bali yang berasal dari sebauah desa yang bernama desa Bebali Kelod yang berlokasi di Kabupaten Tabanan Kecamanatan Selemadeg. 
         </p>
         <p>
-            Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
+           Saya lahir pada 15 Oktober 2005, dan saya merupakan anak kedua dari dua bersaudara. Saya dulunya tidak mengenal apa itu dunia coding semenjak saya masuk ke SMK saya mulai mengetahui apa itu coding dikarenakan mendapatkan projek berbasis Arduino yang membuat saya tau apa itu coding dan sejak saat itu saya mulai tertarik dengan dunia coding yang membuat saya sekarang beda di sini sebagai mahasiswa IDB Bali dengan jurusan Sistem & teknologi Informasi.
         </p>
         <p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/NpEaa2P7qZI?si=Imsunu0UsXzY5gM2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/sgO9GE7pVVw" title="Video youtube" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </p>
     </article>
 
     <hr>
     <footer style="text-align: center;">
-        <p>Copyright &copy; 2025 John Doe.</p>
+        <p>Copyright &copy; 2025 Arwinata.</p>
     </footer>
 </body>
 </html>
