--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe Personal Website</title>
+    <title>Dewa Arwinata Personal Website</title>
+    <link rel="stylesheet" type="text/CSS" href="style.css">
 </head>
 
 <body>
-    <nav>
+    
+    <nav id="Navbar">
         <a href="index.html">Home</a> |
         <a href="john.pdf">Download CV</a> |
         <a href="contact.html">Contact</a> |
@@ -20,7 +22,8 @@
     <header style="text-align: center;">
         <img src="images/WhatsApp Image 2025-05-02 at 15.32.01_fc2dd73a.jpg" width="200" height="200" style="border-radius: 50%;"/>
         <h1>Dewa Arwinata</h1>
-        <p>Lorem Ipsum is simply dummy text</p>
+        <p>Follow me on Instalgram @de_arwiii</p>
+        <p>Be your self and never surrender</p>
     </header>
 
     <hr />
@@ -53,16 +56,16 @@
                     </td>
                     <td>
                         <ul>
-                            <li>Berselancar di Internet</li>
-                            <li>Sleep in the Windows</li>
-                            <li>Menulis kode sebanyak 1 juta baris</li>
+                            <li>Magang di sebuah toko computer</li>
+                            <li>Instalasi jaringan</li>
+                            <li>Melakukan instalasi CCTV</li>
                         </ul>
                     </td>
                     <td>
                         <ul>
-                            <li>Mancing Keributan</li>
-                            <li>Vibe Coding</li>
-                            <li>Scroll Facebook</li>
+                            <li>Bermain game</li>
+                            <li>Bernyanyi</li>
+                            <li>bermain volly</li>
                         </ul>
                     </td>
                 </tr>
