--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
     <link rel="stylesheet" type="text/CSS" href="style.css">
 </head>
 
-<body>
+<body id="body1">
     
-    <nav id="Navbar">
-        <a href="index.html">Home</a> |
-        <a href="john.pdf">Download CV</a> |
-        <a href="contact.html">Contact</a> |
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="cv.html">Download cv</a>
+        <a href="contact.html">Contact</a>
         <a href="about.html">About me</a>
-    </nav>
+     </nav>
 
     <hr />
 
     <header style="text-align: center;">
         <img src="images/WhatsApp Image 2025-05-02 at 15.32.01_fc2dd73a.jpg" width="200" height="200" style="border-radius: 50%;"/>
         <h1>Dewa Arwinata</h1>
-        <p>Follow me on Instalgram @de_arwiii</p>
+        <p>Follow me on Instalgram</p><a href="https://www.instagram.com/de_arwiii?igsh=dTRieHlwamgxYzFt ">@de_arwiii</a>
         <p>Be your self and never surrender</p>
     </header>
 
@@ -39,12 +39,12 @@
         <table border="1" width="110%">
             <thead>
                 <tr>
-                    <th>Skill</th>
-                    <th>Pengalaman</th>
-                    <th>Hobby</th>
+                    <th class="th1">Skill</th>
+                    <th class="th2">Pengalaman</th>
+                    <th class="th3">Hobby</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="tbody1">
                 <tr>
                     <td>
                         <ul>
