--- a/about.html
+++ b/about.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" type="text/CSS" href="style.css">
 </head>
 
-<body>
-    <nav class="background">
-        <a href="index.html">Home</a> |
-        <a href="cv-dian.pdf">Download CV</a> |
-        <a href="contact.html">Contact</a> |
+<body id="body4">
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="cv.html">Download cv</a>
+        <a href="contact.html">Contact</a>
         <a href="about.html">About me</a>
-    </nav>
+     </nav>
 
     <hr />
 
