dahlah gabisa musik
kecewa

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body id="body1">
+
+    <!-- <audio autoplay> -->
+        <!-- <source src="musik/Hero's Come Back - Nobodyknows. Full [Opening.1 Lyrics  Terjemahan].mp3" type="audio/mpeg"> -->
+    <!-- </audio> -->
     
     <nav>
         <a href="index.html">Home</a>
