--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,13 @@
 </head>
 
 <body id="body3">
+
+      <!-- <audio autoplay> -->
+        <!-- <source src="musik/Hero's Come Back - Nobodyknows. Full [Opening.1 Lyrics  Terjemahan].mp3" type="audio/mpeg"> -->
+    <!-- </audio> -->
+
     <nav>
-        <a href="index.html">Home</a>
+        <a href="index.html" >Home</a>
         <a href="cv.html">Download cv</a>
         <a href="contact.html">Contact</a>
         <a href="about.html">About me</a>
@@ -36,5 +41,6 @@
     <footer style="text-align: center;">
         <p>Copyright &copy; 2025 Arwinata.</p>
     </footer>
+  
 </body>
 </html>
