--- a/cv.html
+++ b/cv.html
@@ -7,8 +7,13 @@
     <link rel="stylesheet" type="text/CSS" href="style.css">
 </head>
 <body id="body2">
+
+      <!-- <audio autoplay> -->
+        <!-- <source src="musik/Hero's Come Back - Nobodyknows. Full [Opening.1 Lyrics  Terjemahan].mp3" type="audio/mpeg"> -->
+    <!-- </audio> -->
+
     <nav>
-        <a href="index.html">Home</a>
+        <a href="index.html" >Home</a>
         <a href="cv.html">Download cv</a>
         <a href="contact.html">Contact</a>
         <a href="about.html">About me</a>
@@ -23,5 +28,6 @@
     <footer class="kaki1" style="text-align: center;">
         <p>Copyright &copy; 2025 Arwinata.</p>
     </footer>
+   
 </body>
 </html>
