--- a/contact.html
+++ b/contact.html
@@ -8,13 +8,12 @@
     <link rel="stylesheet" type="text/CSS" href="style.css">
 </head>
 
-<body id="body3">
+<body>
 
       <!-- <audio autoplay> -->
         <!-- <source src="musik/Hero's Come Back - Nobodyknows. Full [Opening.1 Lyrics  Terjemahan].mp3" type="audio/mpeg"> -->
     <!-- </audio> -->
-
-    <nav>
+    <nav class="nav">
         <a href="index.html" >Home</a>
         <a href="cv.html">Download cv</a>
         <a href="contact.html">Contact</a>
@@ -41,6 +40,5 @@
     <footer style="text-align: center;">
         <p>Copyright &copy; 2025 Arwinata.</p>
     </footer>
-  
 </body>
 </html>
