--- a/cv.html
+++ b/cv.html
@@ -6,13 +6,13 @@
     <title>My PDF</title>
     <link rel="stylesheet" type="text/CSS" href="style.css">
 </head>
-<body id="body2">
+<body>
 
       <!-- <audio autoplay> -->
         <!-- <source src="musik/Hero's Come Back - Nobodyknows. Full [Opening.1 Lyrics  Terjemahan].mp3" type="audio/mpeg"> -->
     <!-- </audio> -->
-
-    <nav>
+    
+    <nav class="nav">
         <a href="index.html" >Home</a>
         <a href="cv.html">Download cv</a>
         <a href="contact.html">Contact</a>
@@ -28,6 +28,5 @@
     <footer class="kaki1" style="text-align: center;">
         <p>Copyright &copy; 2025 Arwinata.</p>
     </footer>
-   
 </body>
 </html>
