projek uts donee
cukup segini aja

--- a/cv.html
+++ b/cv.html
@@ -7,10 +7,6 @@
     <link rel="stylesheet" type="text/CSS" href="style.css">
 </head>
 <body>
-
-      <!-- <audio autoplay> -->
-        <!-- <source src="musik/Hero's Come Back - Nobodyknows. Full [Opening.1 Lyrics  Terjemahan].mp3" type="audio/mpeg"> -->
-    <!-- </audio> -->
     
     <nav class="nav">
         <a href="index.html" >Home</a>
@@ -19,8 +15,8 @@
         <a href="about.html">About me</a>
      </nav>
     <hr />
-    <div>
-        <h1>Download MY CV DISINI</h1>
+    <div style="text-align: center;">
+        <h1 >Download MY CV DISINI</h1>
         <a href="https://drive.google.com/drive/folders/1cUsrS_LkkDfww9LJxfR26r-m7OuGg18V?hl=ID" style="font-size: 20px;">Unduh PDF</a>
         <hr /> 
         </div>
