--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
 </head>
 
 <body>
-
-    <!-- <audio autoplay> -->
-        <!-- <source src="musik/Hero's Come Back - Nobodyknows. Full [Opening.1 Lyrics  Terjemahan].mp3" type="audio/mpeg"> -->
-    <!-- </audio> -->
     <nav>
         <a href="index.html">Home</a>
         <a href="cv.html">Download cv</a>
@@ -26,7 +22,7 @@
         <img src="images/WhatsApp Image 2025-05-02 at 15.32.01_fc2dd73a.jpg" width="200" height="200" style="border-radius: 50%;"/>
         <h1>Dewa Arwinata</h1>
         <p>You can contact me on Instalgram</p>
-        <a class="tautan" href="https://www.instagram.com/de_arwiii?igsh=dTRieHlwamgxYzFt ">@de_arwiii</a>
+        <a class="tautan" href="https://www.instagram.com/de_arwiii?igsh=dTRieHlwamgxYzFt ">KLIK DISINI</a>
         <p>Be your self and never surrender</p>
     </header>
 
@@ -34,7 +30,7 @@
 
     <article style="text-align: center;">
         <h2>Tentang Saya</h2>
-        <p class="paragraf">
+        <p>
              Perkenalkan nama saya Dewa Made Arwinata Dana dan saya merupakan mahasiswa dari kampus Institut Desain & Bisnis Bali dan saat ini sedang menekuni pembelajaran di bidang Sistem & Teknologi Informasi, saya merupakan pelajar asli Bali yang berasal dari sebauah desa yang bernama desa Bebali Kelod yang berlokasi di Kabupaten Tabanan Kecamanatan Selemadeg, dan saya memiliki beberapa skill,pengalaman dan hobby seperti berikut.  
         </p>
     </article>
