--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <img src="images/WhatsApp Image 2025-05-02 at 15.32.01_fc2dd73a.jpg" width="200" height="200" style="border-radius: 50%;"/>
         <h1>Dewa Arwinata</h1>
         <p>You can contact me on Instalgram</p>
-        <a class="tautan" href="https://www.instagram.com/de_arwiii?igsh=dTRieHlwamgxYzFt ">KLIK DISINI</a>
+        <img src="images/" alt="">
+        <a class="tautan" href="https://www.instagram.com/de_arwiii?igsh=dTRieHlwamgxYzFt " target="_blank" title="Menuju Instalgram">KLIK DISINI</a>
         <p>Be your self and never surrender</p>
     </header>
 
