--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
     <hr />
 
-    <article style="text-align: center;">
-        <h2>Tentang Saya</h2>
+    <article style="text-align: justify;">
+        <h2 style="text-align: center;">Tentang Saya</h2>
         <p>
              Perkenalkan nama saya Dewa Made Arwinata Dana dan saya merupakan mahasiswa dari kampus Institut Desain & Bisnis Bali dan saat ini sedang menekuni pembelajaran di bidang Sistem & Teknologi Informasi, saya merupakan pelajar asli Bali yang berasal dari sebauah desa yang bernama desa Bebali Kelod yang berlokasi di Kabupaten Tabanan Kecamanatan Selemadeg, dan saya memiliki beberapa skill,pengalaman dan hobby seperti berikut.  
         </p>
