--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <hr />
 
     <header style="text-align: center;">
-        <img src="images/WhatsApp Image 2025-05-02 at 15.32.01_fc2dd73a.jpg" width="200" height="200" style="border-radius: 50%;"/>
+        <img src="images/WhatsApp Image 2025-05-02 at 15.32.01_fc2dd73a.jpg" width="200" height="200" style="border-radius: 50%;margin: 10px; object-fit: cover;"/>
         <h1>Dewa Arwinata</h1>
         <p>You can contact me on Instalgram</p>
         <img src="images/" alt="">
