--- a/about.html
+++ b/about.html
@@ -10,9 +10,6 @@
 
 <body>
 
-    <!-- <audio autoplay> -->
-        <!-- <source src="musik/Hero's Come Back - Nobodyknows. Full [Opening.1 Lyrics  Terjemahan].mp3" type="audio/mpeg"> -->
-    <!-- </audio> -->
     <nav class="nav">
         <a href="index.html" >Home</a>
         <a href="cv.html">Download cv</a>
@@ -23,7 +20,7 @@
     <hr />
 
     <article>
-        <h1>About Me</h1>
+        <h1 style="text-align: center; margin-bottom: 10px;">About Me</h1>
         <p>
             Perkenalkan nama saya Dewa Made Arwinata Dana dan saya merupakan mahasiswa dari kampus Institut Desain & Bisnis Bali dan saat ini sedang menekuni pembelajaran di bidang Sistem & Teknologi Informasi, saya merupakan pelajar asli Bali yang berasal dari sebauah desa yang bernama desa Bebali Kelod yang berlokasi di Kabupaten Tabanan Kecamanatan Selemadeg. 
         </p>
