--- a/cv.html
+++ b/cv.html
@@ -17,7 +17,7 @@
     <hr />
     <div style="text-align: center;">
         <h1 style="margin: 10px;">Download MY CV DISINI</h1>
-        <a href="https://drive.google.com/drive/folders/1cUsrS_LkkDfww9LJxfR26r-m7OuGg18V?hl=ID" style="font-size: 20px;">Unduh PDF</a>
+        <a href="https://drive.google.com/drive/folders/1cUsrS_LkkDfww9LJxfR26r-m7OuGg18V?hl=ID" style="font-size: 20px;">UNDUH PDF</a>
         <hr /> 
         </div>
 
